--- a/app/views/reports/rpt_contratos3_pdf.html.erb
+++ b/app/views/reports/rpt_contratos3_pdf.html.erb
@@ -19,7 +19,7 @@ totals = []
 </h1>
 
 
-  <%= form_tag(exportxls_contratos_path, :method => "get") do %>
+  <%= form_tag(ec_01_contratos_path, :method => "get") do %>
 
   <div class="field">
     Desde <input type="date" name="fecha1" value="2018-03-01" style = "width: 150px" >
@@ -28,6 +28,8 @@ totals = []
 	<div class="field">
     Hasta <input type="date" name="fecha2" value="2018-03-12" style = "width: 150px" >
   </div>
+  
+  
 
   <%= submit_tag  "PDF", :name => "print"    %>
 
