--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -2,10 +2,7 @@
 /* They will automatically be included in application.css.
 /* You can use Sass (SCSS) here: http://sass-lang.com/
 /*
-
-*= require_tree . 
-*/
-
-@import "bootstrap-sprockets";
-@import "bootstrap";
-
+/*
+ *= require_tree .
+ *= require_self
+ */
