--- a/app/views/purchases/_form.html.erb
+++ b/app/views/purchases/_form.html.erb
@@ -172,8 +172,15 @@
     
     <br />
     <div>
-      <strong>Subtotal Gravado:</strong><br />
+      <strong>Total Op. Gravadas:</strong><br />
       <span id="ac_item_subtotal">0.00</span>
+    </div>
+    
+    
+    <br />
+    <div>
+      <strong>Total Op.No  Gravadas:</strong><br />
+      <span id="ac_item_subtotal2">0.00</span>
     </div>
     
     
