--- a/app/views/versions/index.html.erb
+++ b/app/views/versions/index.html.erb
@@ -31,7 +31,10 @@
 <br>
 
 
-<%= link_to 'New Version', new_version_path %>
+<div class="button">
+
+<%= link_to 'Nueva Version', new_version_path %>
+</div>
 
 
 
