--- a/app/views/versions/_form.html.erb
+++ b/app/views/versions/_form.html.erb
@@ -9,7 +9,7 @@
     
     <div class="field">
       <%= f.label :producto_id , "Marca*", :class => "bold" %><br />
-      <%= f.collection_select :producto_id, @productos, :id, :name,{:prompt   => "Seleccione un cliente "} %>
+      <%= f.collection_select :producto_id, @productos, :id, :name,{:prompt   => "Seleccione un producto "} %>
       </div>
 
 
