--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,8 +16,8 @@
     <%= javascript_include_tag "jquery_rails" %>
     <%= javascript_include_tag "jquery.bgiframe.min" %>
     <%= javascript_include_tag "jquery.centerinclient" %>
-    <%= javascript_include_tag "application.js" %>  
 
+    <%= javascript_include_tag "application2.js" %>  
     <%= csrf_meta_tag %>
     
   </head>
