--- a/app/views/purchases/_form.html.erb
+++ b/app/views/purchases/_form.html.erb
@@ -61,6 +61,58 @@
       <p class="bold big">Productos:</p>
     </div>
     
+
+    <br />
+     <div class="field">
+    <strong>Op.Inafecta :</strong><br />
+    <%= f.number_field :inafecto, value: number_with_precision(f.object.inafecto, precision: 2) %>
+  </div>
+
+    <div class="small">
+      Importe Op.Inafecta  para agregar una factura.
+    </div>
+    <br />
+    
+    <strong>Op.Afecta :</strong><br />
+ <div class="field">
+    <%= f.number_field :payable_amount, value: number_with_precision(f.object.payable_amount, precision: 2) %>
+</div>
+
+    <div class="small">
+      Importe Op.Afecta  para agregar una factura.
+    </div>
+    <br />
+
+    <br />
+    <div>
+      <strong>Total Op. Gravadas:</strong><br />
+      <span id="ac_item_subtotal">0.00</span>
+    </div>
+    
+    
+    <br />
+    <div>
+      <strong>Total Op.No  Gravadas:</strong><br />
+      <span id="ac_item_subtotal2">0.00</span>
+    </div>
+    
+    
+    
+    <br />
+    <div>
+      <strong>Impuesto (%):</strong><br />
+      <span id="ac_item_tax">0.00</span>
+    </div>
+    
+
+    <div>
+      <strong>Importe Total:</strong><br />
+      <span id="ac_item_total">0.00</span>
+    </div>
+
+    
+    <br />
+
     <%= hr() %>
   
     <div class="field">
@@ -114,95 +166,10 @@
 </div>
 
 
-<div class="mid_box">
-  <h4>
-    Agregar item  a la factura 
-
-  </h4>
-  
-  <form method="get" action="/purchases" onsubmit="addItemToPurchase(); return false;">
-
-    <input type="hidden" name="ac_item_id" id="ac_item_id" value="" />
-    
-    <strong>Producto:</strong><br />
-    <input type="text" name="ac_item" id="ac_item" value="" />
-    <div class="small">
-      Ingrese un termino de busqueda para encontrar un producto.
-    </div>
-    <br />
-    <strong>Impuesto :</strong><br />
-    <input type="text" name="ac_item_impuesto" id="ac_item_impuesto" value="18" class="tf_short" />
-    <div class="small">
-      Precio del  producto para agregar una factura.
-    </div>
-    
-    <br />
-    <strong>Op.Inafecta :</strong><br />
-    <input type="text" name="ac_item_inafecto" id="ac_item_inafecto" value="" class="tf_short" />
-    <div class="small">
-      Precio del  producto para agregar una factura.
-    </div>
-    <br />
-    
-    <strong>Op.Afecta :</strong><br />
-    <input type="text" name="ac_item_price" id="ac_item_price" value="" class="tf_short" />
-    <div class="small">
-      Precio del  producto para agregar una factura.
-    </div>
-    <br />
-    
-    
-    <strong>Cantidad:</strong><br />
-    <input type="text" name="ac_item_quantity" id="ac_item_quantity" value="1" class="tf_short" />
-    <div class="small">
-     Cantidad del producto para agregar una factura.
-    </div>
-    <br />
-    
-  
-    
-    <br />
-    <div>
-      <strong>Total Op. Gravadas:</strong><br />
-      <span id="ac_item_subtotal">0.00</span>
-    </div>
-    
-    
-    <br />
-    <div>
-      <strong>Total Op.No  Gravadas:</strong><br />
-      <span id="ac_item_subtotal2">0.00</span>
-    </div>
-    
-    
-    
-    <br />
-    <div>
-      <strong>Impuesto (%):</strong><br />
-      <span id="ac_item_tax">0.00</span>
-    </div>
-    
-
-    <div>
-      <strong>Importe Total:</strong><br />
-      <span id="ac_item_total">0.00</span>
-    </div>
-
-    
-    <br />
-    <input type="submit" value="Agregar item a Factura" />
-  </form>
-  
-  <%= hr() %>
-    
-</div>
   </form>
   
   <%= hr() %>
   
-
-  
-
 
 <%= br() %>
 <br />
@@ -210,6 +177,7 @@
 <%= render 'layouts/autocomplete' %>
 
 <script type="text/javascript">
+
   $(document).ready(function() {
     $("#ac_supplier").autocomplete("/purchases/ac_suppliers/<%= @company.id %>", {
       matchSubset: 1,
@@ -239,31 +207,45 @@
       selectFirst: false
     });
     
+    
+    $("#purchase_inafecto").bind("keyup", function() {
+      calculoTotal();
+    });
+    $("#purchase_payable_amount").bind("keyup", function() {
+      calculoTotal();
 
-    $("#ac_item").result(function(event, data, formatted) {
-      $("#ac_item_id").val(data[2]);
-      $("#ac_item_price").val(data[4]);
-      $("#ac_item_inafecto").val(data[4]);
-      updateItemTotalPur();
+
     });
 
+
     
-    $("#ac_item_quantity").bind("keyup", function() {
-      updateItemTotalPur();
-    });
+
     
-    $("#ac_item_price").bind("keyup", function() {
-      updateItemTotalPur();
-    });
+      function calculoTotal()
+    {
+      var quantity = 1 ;
+      var price     = $("#purchase_payable_amount").val();
+      var inafecto  = $("#purchase_inafecto").val();
+      
+      
+      var vventa = round( price ,2);
+      var total = round(vventa  * 1.18,2 );
+      var igv = round(total - vventa ,2);
+      total += round(inafecto,2) ; 
+      
+      $("#ac_item_subtotal").html(price);
+      $("#ac_item_subtotal2").html(inafecto);
+      $("#ac_item_tax").html(igv);
+      $("#ac_item_total").html(total);
+
+      
+     
+    }
     
+    function round(value, decimals) {
+      return Number(Math.round(value+'e'+decimals)+'e-'+decimals);
   
-    $("#ac_item_inafecto").bind("keyup", function() {
-      updateItemTotalPur();
-    });
-    
-    <% if @products_lines %>
-    alert 'holas products_lines';
-      listItemsPurchase();
-    <% end %>
+    }
+
   });
 </script>
