--- a/app/views/companies/faqs.html.erb
+++ b/app/views/companies/faqs.html.erb
@@ -2,7 +2,18 @@
 
   <h3>
     <%= image_tag("invoice_32.png", :class => "vmiddle") %>
-    <%= link_to "Facturas y notas ", "/companies/facturas/#{@company.id}" %>
+    <%= link_to "Facturas de contratos ", "/companies/facturas/#{@company.id}" %>
+  </h3>
+
+  <p>
+     Agregar, editar or eliminar facturas de contratos para tu negocio.
+  </p>
+  
+  
+  <%= hr() %>
+  <h3>
+    <%= image_tag("invoice_32.png", :class => "vmiddle") %>
+    <%= link_to "Facturas y notas  ", "/companies/facturas/#{@company.id}" %>
   </h3>
 
   <p>
