--- a/app/views/facturas/_list.html.erb
+++ b/app/views/facturas/_list.html.erb
@@ -41,7 +41,7 @@
           
           <td class="bordered_right bordered_bottom">
             <%if invoice.contrato != nil %>
-            <%= money(invoice.contrato.code) %>
+            <%= invoice.contrato.code %>
             <% end %>
           </td>
           <td class="bordered_right bordered_bottom right">
