--- a/app/views/reports/reports_compras.html.erb
+++ b/app/views/reports/reports_compras.html.erb
@@ -29,6 +29,12 @@
    Facturas 
   </h3>
   
+
+
+  <p class="big">
+    <%= link_to "Documentos de compras  ", "/companies/reports/rpt_cpagar1_all/#{@company.id}" %>
+  </p>
+  
   <p class="big">
     <%= link_to "Facturas ", "/companies/reports/rpt_purchase_all/#{@company.id}" %>
   </p>
