--- a/app/views/purchases/_form.html.erb
+++ b/app/views/purchases/_form.html.erb
@@ -36,6 +36,11 @@
       <%= f.text_field :documento %>
 
     </div>
+
+    <div class="field">
+      <%= f.label :fecha3, "Fecha Registro*", :class => "bold" %><br />
+      <%= f.date_field :fecha3  %>
+    </div>
     <div class="field">
       <%= f.label :date1, "Fecha Emision*", :class => "bold" %><br />
       <%= f.date_field :date1  %>
