--- a/app/views/facturas/_form.html.erb
+++ b/app/views/facturas/_form.html.erb
@@ -47,7 +47,7 @@
     
     <div class="field">
       <%= f.label :medio_id %><br />
-      <%= f.select :medio_id,options_from_collection_for_select(@medios,'id','name') %>
+      <%= f.select :medio_id,options_from_collection_for_select(@medios,'id','descrip') %>
     </div>
     
 
