--- a/app/views/contratos/contrato_rpt2.pdf.erb
+++ b/app/views/contratos/contrato_rpt2.pdf.erb
@@ -131,7 +131,7 @@
                         <td width="30%"> </td>
                         <td width="10%" align="right"> </td>
                         <td width="5%" align="right"> </td>
-                        <td width="10%" align="right"> <%= product.importe  %></td>
+                        <td width="10%" align="right"> <%= product.total  %></td>
                         <td width="10%" align="right"> </td>
                         <td width="10%" align="right"> </td>
                         <td width="10%" align="right"> <%= @saldo_cliente  %> </td>
